# llama_chat

./: .env  README.md  app.py  custom_console.py  google_llm_init.py  main.py  pyproject.toml  system_prompt.txt
storage/2019/: default__vector_store.json  docstore.json  index_store.json
storage/2020/: default__vector_store.json  docstore.json  index_store.json
storage/2021/: default__vector_store.json  docstore.json  index_store.json
storage/2022/: default__vector_store.json  docstore.json  index_store.json
