[project]
name = "chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.15",
    "libmagic>=1.0",
    "llama-hub>=0.0.79.post1",
    "llama-index>=0.12.46",
    "llama-index-core>=0.12.46",
    "llama-index-embeddings-google>=0.3.1",
    "llama-index-embeddings-google-genai>=0.2.1",
    "llama-index-llms-google-genai>=0.2.3",
    "llama-index-vector-stores-chroma>=0.4.2",
    "python-magic-bin==0.4.14",
    "unstructured>=0.18.3",
]
